--- a/Festival/index.html
+++ b/Festival/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <title>Infinite-Sounds Festival | 2023 | LINE-UP</title>
 </head>
 
@@ -25,6 +26,7 @@
     </header>
     <main>
         <section id="line-up">
+            <p class="Line-up">Line-up</p>
             <div class="container">
                 <div class="grid-card"><img src="static/Assets/Alec1.jpg" alt="Alec Benjamin">
                     <h1>Alec Benjamin</h1>
@@ -71,6 +73,21 @@
             </div>
         </section>
     </main>
+    <footer>
+        <img src="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg" alt="Logo">
+
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-spotify"></i>
+        <i class="fa-brands fa-tiktok"></i>
+        <p>
+            Privacy Policy - Terms of Use - FAQ & Contact
+        </p>
+        <p class="copyright">Copyright</p>
+
+    </footer>
 </body>
 
 </html>
