--- a/Festival/index.html
+++ b/Festival/index.html
@@ -28,10 +28,10 @@
         <section id="line-up">
             <p class="Line-up">Line-up</p>
             <div class="container">
-                <div class="grid-card"><img src="static/Assets/Alec1.jpg" alt="Alec Benjamin">
+                <a href="artiest.html"><div class="grid-card"><img src="static/Assets/Alec1.jpg" alt="Alec Benjamin">
                     <h1>Alec Benjamin</h1>
                     <h2>Main Stage, 12u30 - 14u</h2>
-                </div>
+                </div></a>
                 <div class="grid-card"><img src="static/Assets/Dermot;.jpg" alt="Dermot Kennedy">
                     <h1>Dermot Kennedy</h1>
                     <h2>Main Stage, 14u30 - 16u</h2>
