--- a/Festival/artiest.html
+++ b/Festival/artiest.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +18,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="">Line-Up</a></li>
+                <li><a href="index.html">Line-Up</a></li>
                 <li><a href="">Nieuws</a></li>
                 <li><a href="">Info</a></li>
                 <li><a href="">Shop</a></li>
@@ -25,7 +26,36 @@
         </nav>
     </header>
     <main>
-
+        <section id="AlecBenjamin">
+            <div class="container">
+                <div class="grid-card">
+                    <img src="/Script/Festival/static/Assets/Alec1.jpg" alt="AlecBenjamin">
+                </div>
+                <div class="grid-card">
+                    <p>Alec Shane Benjamin (geboren op 28 mei 1994) is een Amerikaanse singer-songwriter uit Phoenix,
+                        Arizona. Hij is populair geworden door zijn popsongs die het verhaal vertellen van
+                        gebeurtenissen uit zijn eigen leven. Hij wordt sterk beïnvloed door artiesten als Eminem, John
+                        Mayer, Paul Simon en Ben Gibbard. In 2019 nam hij twee singles op met Spotify Studios NYC,
+                        waaronder een cover van Eminem's nummer 'Stan'
+                        Hij speelde zijn liedjes op parkeerplaatsen bij Shawn Mendes en Troye Sivan- optredens, en
+                        deelde visitekaartjes uit om zijn werk te promoten. Hij wordt beschouwd als een selfmade
+                        artiest; iemand die vanuit het niets is begonnen. Zijn bekendste hit is "Let me down slowly".
+                    </p>
+                </div>
+            </div>
+            
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-spotify"></i>
+            <i class="fa-solid fa-globe"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/artist/5IH6FPUwQTxPSXurCrcIov?utm_source=generator&theme=0"
+                width="100%" height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+            </iframe>
+        </section>
     </main>
     <footer>
         <img src="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg" alt="Logo">
