--- a/Festival/artiest.html
+++ b/Festival/artiest.html
@@ -41,11 +41,11 @@
                         deelde visitekaartjes uit om zijn werk te promoten. Hij wordt beschouwd als een selfmade
                         artiest; iemand die vanuit het niets is begonnen. Zijn bekendste hit is "Let me down slowly".
                     </p>
-                    <i class="fa-brands fa-youtube"></i>
-                    <i class="fa-brands fa-spotify"></i>
-                    <i class="fa-solid fa-globe"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-youtube"></i><br>
+                    <i class="fa-brands fa-spotify"></i><br>
+                    <i class="fa-solid fa-globe"></i><br>
+                    <i class="fa-brands fa-instagram"></i><br>
+                    <i class="fa-brands fa-facebook-f"></i><br>
                     <i class="fa-brands fa-twitter"></i>
                 </div>
             </div>
