--- a/Festival/artiest.html
+++ b/Festival/artiest.html
@@ -27,7 +27,7 @@
     </header>
     <main>
         <section id="AlecBenjamin">
-            <div class="container">
+            <div class="container2">
                 <div class="grid-card">
                     <img src="/Script/Festival/static/Assets/Alec1.jpg" alt="AlecBenjamin">
                 </div>
@@ -41,12 +41,14 @@
                         deelde visitekaartjes uit om zijn werk te promoten. Hij wordt beschouwd als een selfmade
                         artiest; iemand die vanuit het niets is begonnen. Zijn bekendste hit is "Let me down slowly".
                     </p>
-                    <i class="fa-brands fa-youtube"></i><br>
-                    <i class="fa-brands fa-spotify"></i><br>
-                    <i class="fa-solid fa-globe"></i><br>
-                    <i class="fa-brands fa-instagram"></i><br>
-                    <i class="fa-brands fa-facebook-f"></i><br>
-                    <i class="fa-brands fa-twitter"></i>
+                    <div class="icons">
+                        <i class="fa-brands fa-youtube"></i><br>
+                        <i class="fa-brands fa-spotify"></i><br>
+                        <i class="fa-solid fa-globe"></i><br>
+                        <i class="fa-brands fa-instagram"></i><br>
+                        <i class="fa-brands fa-twitter"></i><br>
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </div>
                 </div>
             </div>
 
