--- a/Festival/artiest.html
+++ b/Festival/artiest.html
@@ -51,15 +51,12 @@
                     </div>
                 </div>
             </div>
-
-            <iframe style="border-radius:12px"
-                src="https://open.spotify.com/embed/artist/5IH6FPUwQTxPSXurCrcIov?utm_source=generator&theme=0"
-                width="100%" height="352" frameBorder="0" allowfullscreen=""
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
-            </iframe>
+            <div class="embedframe">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5IH6FPUwQTxPSXurCrcIov?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
         </section>
     </main>
-    <footer>
+    <footer class="artiest-footer">
         <img src="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg" alt="Logo">
 
         <i class="fa-brands fa-instagram"></i>
