--- a/Festival/artiest.html
+++ b/Festival/artiest.html
@@ -41,13 +41,14 @@
                         deelde visitekaartjes uit om zijn werk te promoten. Hij wordt beschouwd als een selfmade
                         artiest; iemand die vanuit het niets is begonnen. Zijn bekendste hit is "Let me down slowly".
                     </p>
-                    <div class="icons">
-                        <i class="fa-brands fa-youtube"></i><br>
-                        <i class="fa-brands fa-spotify"></i><br>
-                        <i class="fa-solid fa-globe"></i><br>
-                        <i class="fa-brands fa-instagram"></i><br>
-                        <i class="fa-brands fa-twitter"></i><br>
-                        <i class="fa-brands fa-facebook-f"></i>
+                    <div class="icons"> 
+                        <a href="https://www.youtube.com/@AlecBenjaminMusic"></a><i class="fa-brands fa-youtube"></i></a><br>
+                        <a href="https://open.spotify.com/artist/5IH6FPUwQTxPSXurCrcIov"></a><i class="fa-brands fa-spotify"></i></a><br>
+                        <a href="https://www.alecbenjamin.com/?email=sennecoen11%40gmail.com&autoreply=yes&Datasource=AlecBenjamin_OlderOutNow_Standalone_Website&newsletterId=14077609"></a><i class="fa-solid fa-globe"></i></a><br>
+                        <a href="https://www.instagram.com/alecbenjamin/"></a><i class="fa-brands fa-instagram"></i></a><br>
+                        <a href="https://twitter.com/AlecBenjamin"></a><i class="fa-brands fa-twitter"></i></a><br>
+                        <a href="https://www.facebook.com/search/top?q=alec%20benjamin"></a><i class="fa-brands fa-facebook-f"></i></a><br>
+                        <a href="https://www.tiktok.com/@alecbenjamin"></a><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
