--- a/Festival/index.html
+++ b/Festival/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="Icon" type="image" href="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg">
     <title>Infinite-Sounds Festival | 2023 | LINE-UP</title>
 </head>
 
