--- a/Festival/artiest.html
+++ b/Festival/artiest.html
@@ -42,13 +42,13 @@
                         artiest; iemand die vanuit het niets is begonnen. Zijn bekendste hit is "Let me down slowly".
                     </p>
                     <div class="icons"> 
-                        <a href="https://www.youtube.com/@AlecBenjaminMusic"></a><i class="fa-brands fa-youtube"></i></a><br>
-                        <a href="https://open.spotify.com/artist/5IH6FPUwQTxPSXurCrcIov"></a><i class="fa-brands fa-spotify"></i></a><br>
-                        <a href="https://www.alecbenjamin.com/?email=sennecoen11%40gmail.com&autoreply=yes&Datasource=AlecBenjamin_OlderOutNow_Standalone_Website&newsletterId=14077609"></a><i class="fa-solid fa-globe"></i></a><br>
-                        <a href="https://www.instagram.com/alecbenjamin/"></a><i class="fa-brands fa-instagram"></i></a><br>
-                        <a href="https://twitter.com/AlecBenjamin"></a><i class="fa-brands fa-twitter"></i></a><br>
+                        <a href="https://www.youtube.com/@AlecBenjaminMusic"><i class="fa-brands fa-youtube"></i></a><br>
+                        <a href="https://open.spotify.com/artist/5IH6FPUwQTxPSXurCrcIov"><i class="fa-brands fa-spotify"></i></a><br>
+                        <a href="https://www.alecbenjamin.com/?email=sennecoen11%40gmail.com&autoreply=yes&Datasource=AlecBenjamin_OlderOutNow_Standalone_Website&newsletterId=14077609"><i class="fa-solid fa-globe"></i></a><br>
+                        <a href="https://www.instagram.com/alecbenjamin/"><i class="fa-brands fa-instagram"></i></a><br>
+                        <a href="https://twitter.com/AlecBenjamin"><i class="fa-brands fa-twitter"></i></a><br>
                         <a href="https://www.facebook.com/search/top?q=alec%20benjamin"></a><i class="fa-brands fa-facebook-f"></i></a><br>
-                        <a href="https://www.tiktok.com/@alecbenjamin"></a><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com/@alecbenjamin"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
