--- a/Festival/artiest.html
+++ b/Festival/artiest.html
@@ -47,7 +47,7 @@
                         <a href="https://www.alecbenjamin.com/?email=sennecoen11%40gmail.com&autoreply=yes&Datasource=AlecBenjamin_OlderOutNow_Standalone_Website&newsletterId=14077609"><i class="fa-solid fa-globe"></i></a><br>
                         <a href="https://www.instagram.com/alecbenjamin/"><i class="fa-brands fa-instagram"></i></a><br>
                         <a href="https://twitter.com/AlecBenjamin"><i class="fa-brands fa-twitter"></i></a><br>
-                        <a href="https://www.facebook.com/search/top?q=alec%20benjamin"></a><i class="fa-brands fa-facebook-f"></i></a><br>
+                        <a href="https://www.facebook.com/search/top?q=alec%20benjamin"><i class="fa-brands fa-facebook-f"></i></a><br>
                         <a href="https://www.tiktok.com/@alecbenjamin"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
