--- a/Festival/index.html
+++ b/Festival/index.html
@@ -35,15 +35,18 @@
                         <h2>Main Stage, 12u30 - 14u</h2>
                     </div>
                 </a>
-                <div class="grid-card"><img src="static/Assets/Dermot;.jpg" alt="Dermot Kennedy">
+                <div class="grid-card">
+                    <a href="Dermot.html"><img src="static/Assets/Dermot;.jpg" alt="Dermot Kennedy">
                     <h1>Dermot Kennedy</h1>
-                    <h2>Main Stage, 14u30 - 16u</h2>
-                </div>
-                <div class="grid-card"><img src="static/Assets/taylor-swift.npg.png" alt="Taylor Swift">
-                    <h1>Taylor Swift</h1>
-                    <h2> Main Stage, 16u30 - 19u</h2>
+                    <h2>Main Stage, 14u30 - 16u</h2></a>
                 </div>
                 <div class="grid-card">
+                    <a href="Taylor.html"><img src="static/Assets/taylor-swift.npg.png" alt="Taylor Swift">
+                    <h1>Taylor Swift</h1>
+                    <h2> Main Stage, 16u30 - 19u</h2></a>
+                </div>
+                <div class="grid-card">
+                    <a href="1D.html"></a>
                     <figure>
                         <img src="static/Assets/1D.jpg" alt="One Direction">
                         <figcaption>
@@ -51,27 +54,32 @@
                         </figcaption>
                     </figure>
                     <h1>One Direction</h1>
-                    <h2>Main Stage, 19u30 - 21u30</h2>
+                    <h2>Main Stage, 19u30 - 21u30</h2></a>
                 </div>
-                <div class="grid-card"><img src="static/Assets/imagine-dragons.png" alt="Imagine Dragons">
+                <div class="grid-card">
+                    <a href="ImagineDragons.html"><img src="static/Assets/imagine-dragons.png" alt="Imagine Dragons">
                     <h1>Imagine Dragons</h1>
-                    <h2>Main Stage, 22u - 0u</h2>
+                    <h2>Main Stage, 22u - 0u</h2></a>
                 </div>
-                <div class="grid-card"><img src="static/Assets/arctic-monkeys.jpg" alt="Arctic Monkeys">
+                <div class="grid-card">
+                    <a href="Arctic.html"><img src="static/Assets/arctic-monkeys.jpg" alt="Arctic Monkeys">
                     <h1>Arctic Monkeys</h1>
-                    <h2>Infinite Stage, 12u30 - 14u</h2>
+                    <h2>Infinite Stage, 12u30 - 14u</h2></a>
                 </div>
-                <div class="grid-card"><img src="static/Assets/Coldplay.jpg" alt="Coldplay">
+                <div class="grid-card">
+                    <a href="Coldplay.html"><img src="static/Assets/Coldplay.jpg" alt="Coldplay">
                     <h1>Coldplay</h1>
-                    <h2>Infinite Stage, 15u - 16u</h2>
+                    <h2>Infinite Stage, 15u - 16u</h2></a>
                 </div>
-                <div class="grid-card"><img src="static/Assets/chase-atlantic.jpeg" alt="Chase Atlantic">
+                <div class="grid-card">
+                    <a href="Chase.html"><img src="static/Assets/chase-atlantic.jpeg" alt="Chase Atlantic">
                     <h1>Chase Atlantic</h1>
-                    <h2>Infinite Stage, 17u - 18u30</h2>
+                    <h2>Infinite Stage, 17u - 18u30</h2></a>
                 </div>
-                <div class="grid-card"><img src="static/Assets/nf.jpg" alt="NF">
+                <div class="grid-card">
+                    <a href="NF.html"><img src="static/Assets/nf.jpg" alt="NF">
                     <h1>NF</h1>
-                    <h2>Infinite Stage, 19u - 21u</h2>
+                    <h2>Infinite Stage, 19u - 21u</h2></a>
                 </div>
             </div>
         </section>
