--- a/Festival/Arctic.html
+++ b/Festival/Arctic.html
@@ -29,24 +29,28 @@
         <section id="AlecBenjamin">
             <div class="container2">
                 <div class="grid-card">
-                    <img src="..." alt="...">
+                    <img src="/Script/Festival/static/Assets/arctic-monkeys.jpg" alt="arctic-monkeys">
                 </div>
                 <div class="grid-card">
-                    <p>...
+                    <p>De Arctic Monkeys is een Britse indierockband uit Sheffield, Engeland. De band, die in 2002 werd opgericht, bestaat uit zanger-gitarist Alex Turner, gitarist Jamie Cook, bassist Nick O'Malley en drummer Matthew Helders. Tot 2006 was Andy Nicholson bassist van de band.
+
+                        In 2004 en 2005 kreeg de band bekendheid door het verspreiden van hun demo's via het internet. Dit zorgde voor een mediahype rondom Arctic Monkeys en maakte hun debuutalbum Whatever people say I am, that's what I'm not in 2006 het best verkopende debuut ooit in het Verenigd Koninkrijk. Evenals het album bereikten de singles "I Bet You Look Good on the Dancefloor" en "When the Sun Goes Down" de nummer 1-positie in het land. Een jaar later volgde het tweede album Favourite Worst Nightmare, met leadsingle "Brianstorm". In 2009 verscheen het derde album Humbug, geproduceerd door Josh Homme en James Ford. Sinds 2012 wonen de bandleden in Los Angeles.
+                        
+                        De band werd op hun debuutalbum gekenmerkt door hun snelle, agressieve postpunk en Turners teksten die gebaseerd waren op eigen observaties en ervaringen in Sheffield. Met de komst van hun latere albums evolueerde het geluid meer richting psychedelische en alternatieve rock.
                     </p>
                     <div class="icons"> 
-                        <a href="..."><i class="fa-brands fa-youtube"></i></a><br>
-                        <a href="..."></i></a><br>
-                        <a href="..."><i class="fa-solid fa-globe"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-instagram"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-twitter"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-facebook-f"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.youtube.com/@arcticmonkeys"><i class="fa-brands fa-youtube"></i></a><br>
+                        <a href="https://open.spotify.com/artist/7Ln80lUS6He07XvHI8qqHH"><i class="fa-brands fa-spotify"></i></a><br>
+                        <a href="https://arcticmonkeys.com/"><i class="fa-solid fa-globe"></i></a><br>
+                        <a href="https://www.instagram.com/arcticmonkeys/"><i class="fa-brands fa-instagram"></i></a><br>
+                        <a href="https://twitter.com/ArcticMonkeys"><i class="fa-brands fa-twitter"></i></a><br>
+                        <a href="https://www.facebook.com/ArcticMonkeys"><i class="fa-brands fa-facebook-f"></i></a><br>
+                        <a href="https://www.tiktok.com/@arcticmonkeysmusic"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
             <div class="embedframe">
-                ...
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/7Ln80lUS6He07XvHI8qqHH?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </section>
     </main>
