--- a/Festival/Taylor.html
+++ b/Festival/Taylor.html
@@ -29,14 +29,14 @@
         <section id="AlecBenjamin">
             <div class="container2">
                 <div class="grid-card">
-                    <img src="..." alt="...">
+                    <img src="/Script/Festival/static/Assets/taylor-swift.npg.png" alt="taylor-swift">
                 </div>
                 <div class="grid-card">
                     <p>...
                     </p>
                     <div class="icons"> 
                         <a href="..."><i class="fa-brands fa-youtube"></i></a><br>
-                        <a href="..."></i></a><br>
+                        <a href="..."><i class="fa-brands fa-spotify"></i></a><br>
                         <a href="..."><i class="fa-solid fa-globe"></i></a><br>
                         <a href="..."><i class="fa-brands fa-instagram"></i></a><br>
                         <a href="..."><i class="fa-brands fa-twitter"></i></a><br>
