--- a/Festival/index.html
+++ b/Festival/index.html
@@ -46,13 +46,14 @@
                     <h2> Main Stage, 16u30 - 19u</h2></a>
                 </div>
                 <div class="grid-card">
-                    <a href="1D.html"></a>
+                    <a href="1D.html">
                     <figure>
-                        <img src="static/Assets/1D.jpg" alt="One Direction">
+                        <img src="static/Assets/1D.jpg" alt="One Direction"></a>
                         <figcaption>
                             <span> ÉÉNMALIG </span>
                         </figcaption>
                     </figure>
+                    <a href="1D.html">
                     <h1>One Direction</h1>
                     <h2>Main Stage, 19u30 - 21u30</h2></a>
                 </div>
