--- a/Festival/NF.html
+++ b/Festival/NF.html
@@ -36,7 +36,7 @@
                     </p>
                     <div class="icons"> 
                         <a href="..."><i class="fa-brands fa-youtube"></i></a><br>
-                        <a href="..."></i></a><br>
+                        <a href="..."><i class="fa-brands fa-spotify"></i></a><br>
                         <a href="..."><i class="fa-solid fa-globe"></i></a><br>
                         <a href="..."><i class="fa-brands fa-instagram"></i></a><br>
                         <a href="..."><i class="fa-brands fa-twitter"></i></a><br>
