--- a/Festival/Chase.html
+++ b/Festival/Chase.html
@@ -11,6 +11,7 @@
     <link rel="Icon" type="image" href="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg">
     <title>Infinite-Sounds Festival | 2023 | LINE-UP</title>
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -26,7 +27,7 @@
         </nav>
     </header>
     <main>
-        <section id="AlecBenjamin">
+        <section id="artists">
             <div class="container2">
                 <div class="grid-card">
                     <img src="/Script/Festival/static/Assets/chase-atlantic.jpeg" alt="chase-atlantic">
@@ -34,19 +35,25 @@
                 <div class="grid-card">
                     <p>...
                     </p>
-                    <div class="icons"> 
-                        <a href="..."><i class="fa-brands fa-youtube"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-spotify"></i></a><br>
-                        <a href="..."><i class="fa-solid fa-globe"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-instagram"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-twitter"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-facebook-f"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-tiktok"></i></a>
+                    <div class="icons">
+                        <a href="https://www.youtube.com/@chaseatlantic"><i class="fa-brands fa-youtube"></i></a><br>
+                        <a href="https://open.spotify.com/artist/7cYEt1pqMgXJdq00hAwVpT"><i
+                                class="fa-brands fa-spotify"></i></a><br>
+                        <a href="https://chaseatlantic.com/"><i class="fa-solid fa-globe"></i></a><br>
+                        <a href="https://www.instagram.com/chaseatlantic/"><i
+                                class="fa-brands fa-instagram"></i></a><br>
+                        <a href="https://twitter.com/ChaseAtlantic"><i class="fa-brands fa-twitter"></i></a><br>
+                        <a href="https://www.facebook.com/ChaseAtlantic"><i class="fa-brands fa-facebook-f"></i></a><br>
+                        <a href="https://www.tiktok.com/@chaseatlantic"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
             <div class="embedframe">
-                ...
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/artist/7cYEt1pqMgXJdq00hAwVpT?utm_source=generator&theme=0"
+                    width="100%" height="352" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
             </div>
         </section>
     </main>
