--- a/Festival/index.html
+++ b/Festival/index.html
@@ -29,7 +29,7 @@
         <section id="line-up">
             <p class="Line-up">Line-up</p>
             <div class="container">
-                <a href="artiest.html">
+                <a href="Alec.html">
                     <div class="grid-card"><img src="static/Assets/Alec1.jpg" alt="Alec Benjamin">
                         <h1>Alec Benjamin</h1>
                         <h2>Main Stage, 12u30 - 14u</h2>
