--- a/Festival/1D.html
+++ b/Festival/1D.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <main>
-        <section id="AlecBenjamin">
+        <section id="artists">
             <div class="container2">
                 <div class="grid-card">
                     <img src="/Script/Festival/static/Assets/1D.jpg" alt="1D">
