--- a/Festival/Arctic.html
+++ b/Festival/Arctic.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <main>
-        <section id="AlecBenjamin">
+        <section id="artists">
             <div class="container2">
                 <div class="grid-card">
                     <img src="/Script/Festival/static/Assets/arctic-monkeys.jpg" alt="arctic-monkeys">
