--- a/Festival/Coldplay.html
+++ b/Festival/Coldplay.html
@@ -26,27 +26,29 @@
         </nav>
     </header>
     <main>
-        <section id="AlecBenjamin">
+        <section id="artists">
             <div class="container2">
                 <div class="grid-card">
                     <img src="/Script/Festival/static/Assets/Coldplay.jpg" alt="coldplay">
                 </div>
                 <div class="grid-card">
-                    <p>...
+                    <p>Coldplay is een Britse rockband, die in 1996 in Londen werd gevormd. De leden zijn zanger Chris Martin, gitarist Jon Buckland, drummer Will Champion en bassist Guy Berryman.
+
+                        In het begin werd Coldplay vergeleken met andere artiesten en bands, waaronder Radiohead, U2 en Travis. De band brak met de single Yellow door, gevolgd door hun debuutalbum Parachutes (2000). A Rush of Blood to the Head (2002), het tweede album, betekende hun definitieve doorbraak. Het album won ook meerdere prijzen. In 2005 kwam het album X&Y, dat in zestien landen op nummer één kwam. Het vierde album, Viva la Vida or Death and All His Friends, werd samen met Brian Eno geproduceerd en ontving meerdere Grammy's. Hun vijfde album Mylo Xyloto is weer geproduceerd door Eno. Hits van Coldplay zijn onder meer Speed of Sound, Clocks, Yellow, Viva la Vida, The Scientist, Fix You, Paradise en Magic.
                     </p>
                     <div class="icons"> 
-                        <a href="..."><i class="fa-brands fa-youtube"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-spotify"></i></a><br>
-                        <a href="..."><i class="fa-solid fa-globe"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-instagram"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-twitter"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-facebook-f"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.youtube.com/channel/UCDPM_n1atn2ijUwHd0NNRQw"><i class="fa-brands fa-youtube"></i></a><br>
+                        <a href="https://open.spotify.com/artist/4gzpq5DPGxSnKTe4SA8HAU"><i class="fa-brands fa-spotify"></i></a><br>
+                        <a href="https://www.coldplay.com/"><i class="fa-solid fa-globe"></i></a><br>
+                        <a href="https://www.instagram.com/coldplay/"><i class="fa-brands fa-instagram"></i></a><br>
+                        <a href="https://twitter.com/coldplay"><i class="fa-brands fa-twitter"></i></a><br>
+                        <a href="https://www.facebook.com/coldplay"><i class="fa-brands fa-facebook-f"></i></a><br>
+                        <a href="https://www.tiktok.com/@coldplay"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
             <div class="embedframe">
-                ...
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/4gzpq5DPGxSnKTe4SA8HAU?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </section>
     </main>
