--- a/Festival/NF.html
+++ b/Festival/NF.html
@@ -26,27 +26,27 @@
         </nav>
     </header>
     <main>
-        <section id="AlecBenjamin">
+        <section id="artists">
             <div class="container2">
                 <div class="grid-card">
-                    <img src="..." alt="...">
+                    <img src="/Script/Festival/NF.html" alt="NF">
                 </div>
                 <div class="grid-card">
-                    <p>...
+                    <p>Nathan John Feuerstein (Gladwin, Michigan, 30 maart 1991), bekend onder zijn artiestennaam NF (soms geschreven als ИF), is een Amerikaanse rapper. Hij heeft zes studioalbums uitgebracht: Mansion (2015), Therapy Session (2016), Perception (2017), The Search (2019), CLOUDS (2021) en HOPE (2023). De single "Let You Down" van zijn album Perception maakte hem wereldwijd bekend.
                     </p>
                     <div class="icons"> 
-                        <a href="..."><i class="fa-brands fa-youtube"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-spotify"></i></a><br>
-                        <a href="..."><i class="fa-solid fa-globe"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-instagram"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-twitter"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-facebook-f"></i></a><br>
-                        <a href="..."><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.youtube.com/channel/UCoRR6OLuIZ2-5VxtnQIaN2w"><i class="fa-brands fa-youtube"></i></a><br>
+                        <a href="https://open.spotify.com/artist/6fOMl44jA4Sp5b9PpYCkzz"><i class="fa-brands fa-spotify"></i></a><br>
+                        <a href="https://www.nfrealmusic.com/#/"><i class="fa-solid fa-globe"></i></a><br>
+                        <a href="https://www.instagram.com/nfrealmusic/"><i class="fa-brands fa-instagram"></i></a><br>
+                        <a href="https://twitter.com/nfrealmusic"><i class="fa-brands fa-twitter"></i></a><br>
+                        <a href="https://www.facebook.com/nfrealmusic"><i class="fa-brands fa-facebook-f"></i></a><br>
+                        <a href="https://www.tiktok.com/@nfrealmusic"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
             <div class="embedframe">
-                ...
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/6fOMl44jA4Sp5b9PpYCkzz?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </section>
     </main>
