--- a/Festival/1D.html
+++ b/Festival/1D.html
@@ -29,7 +29,7 @@
         <section id="artists">
             <div class="container2">
                 <div class="grid-card">
-                    <img src="/Script/Festival/static/Assets/1D.jpg" alt="1D">
+                    <img src="static/Assets/1D.jpg" alt="1D">
                 </div>
                 <div class="grid-card">
                     <p>One Direction (vaak afgekort als 1D) is een boyband uit het Verenigd Koninkrijk en Ierland, bestaande uit Niall Horan, Liam Payne, Harry Styles, Louis Tomlinson en Zayn Malik. Malik maakte tot 25 maart 2015 deel uit van de band. De vijf oorspronkelijke leden eindigden in 2010 als derde in het Britse talentenjachtprogramma The X Factor. De groep kondigde in 2015 aan zijn carrière voor onbepaalde tijd te zullen onderbreken en trad in december van dat jaar voor het laatst op.
