--- a/Festival/Alec.html
+++ b/Festival/Alec.html
@@ -29,7 +29,7 @@
         <section id="artists">
             <div class="container2">
                 <div class="grid-card">
-                    <img src="/Script/Festival/static/Assets/Alec1.jpg" alt="AlecBenjamin">
+                    <img src="static/Assets/Alec1.jpg" alt="AlecBenjamin">
                 </div>
                 <div class="grid-card">
                     <p>Alec Shane Benjamin (geboren op 28 mei 1994) is een Amerikaanse singer-songwriter uit Phoenix,
