--- a/Festival/Coldplay.html
+++ b/Festival/Coldplay.html
@@ -29,7 +29,7 @@
         <section id="artists">
             <div class="container2">
                 <div class="grid-card">
-                    <img src="/Script/Festival/static/Assets/Coldplay.jpg" alt="coldplay">
+                    <img src="static/Assets/Coldplay.jpg" alt="coldplay">
                 </div>
                 <div class="grid-card">
                     <p>Coldplay is een Britse rockband, die in 1996 in Londen werd gevormd. De leden zijn zanger Chris Martin, gitarist Jon Buckland, drummer Will Champion en bassist Guy Berryman.
