--- a/Festival/ImagineDragons.html
+++ b/Festival/ImagineDragons.html
@@ -29,7 +29,7 @@
         <section id="artists">
             <div class="container2">
                 <div class="grid-card">
-                    <img src="/Script/Festival/ImagineDragons.html" alt="ImagineDragons">
+                    <img src="static/Assets/imagine-dragons.png" alt="ImagineDragons">
                 </div>
                 <div class="grid-card">
                     <p>Imagine Dragons is een Amerikaanse poprockband uit Las Vegas, gevormd in 2008. De band bestaat uit Dan Reynolds (zanger), Wayne Sermon (gitarist), Daniel Platzman (drummer) en Ben McKee (bassist). De manager van de band is Mac Reynolds, de oudere broer van zanger Dan Reynolds.
