--- a/Festival/NF.html
+++ b/Festival/NF.html
@@ -29,7 +29,7 @@
         <section id="artists">
             <div class="container2">
                 <div class="grid-card">
-                    <img src="/Script/Festival/NF.html" alt="NF">
+                    <img src=static/Assets/nf.jpg" alt="NF">
                 </div>
                 <div class="grid-card">
                     <p>Nathan John Feuerstein (Gladwin, Michigan, 30 maart 1991), bekend onder zijn artiestennaam NF (soms geschreven als ИF), is een Amerikaanse rapper. Hij heeft zes studioalbums uitgebracht: Mansion (2015), Therapy Session (2016), Perception (2017), The Search (2019), CLOUDS (2021) en HOPE (2023). De single "Let You Down" van zijn album Perception maakte hem wereldwijd bekend.
