--- a/Festival/Dermot.html
+++ b/Festival/Dermot.html
@@ -29,7 +29,7 @@
         <section id="artists">
             <div class="container2">
                 <div class="grid-card">
-                    <img src="/Script/Festival/static/Assets/Dermot;.jpg" alt="DermotKennedy">
+                    <img src="static/Assets/Dermot;.jpg" alt="DermotKennedy">
                 </div>
                 <div class="grid-card">
                     <p>Dermot Joseph Kennedy is een Ierse singer-songwriter. Hij verwierf bekendheid in Nederland en België door zijn single Power over me die de Nederlandse Top 40 en de Vlaamse hitlijsten heeft bereikt. Begin 2019 bracht hij het album Dermot Kennedy uit, met daarin voorheen uitgebrachte nummers.
