--- a/Festival/Chase.html
+++ b/Festival/Chase.html
@@ -33,7 +33,9 @@
                     <img src="static/Assets/chase-atlantic.jpeg" alt="chase-atlantic">
                 </div>
                 <div class="grid-card">
-                    <p>...
+                    <p>Chase Atlantic is een Australische alternatieve R&B-band en productietrio uit Cairns, Queensland,
+                        opgericht in 2014. De groep bestaat uit drie leden: Christian Anthony, Clinton Cave en Mitchel
+                        Cave. Chase Atlantic heeft zeven EP's en drie albums uitgebracht.
                     </p>
                     <div class="icons">
                         <a href="https://www.youtube.com/@chaseatlantic"><i class="fa-brands fa-youtube"></i></a><br>
