--- a/Festival/1D.html
+++ b/Festival/1D.html
@@ -11,6 +11,7 @@
     <link rel="Icon" type="image" href="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg">
     <title>Infinite-Sounds Festival | 2023 | LINE-UP</title>
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -32,21 +33,34 @@
                     <img src="static/Assets/1D.jpg" alt="1D">
                 </div>
                 <div class="grid-card">
-                    <p>One Direction (vaak afgekort als 1D) is een boyband uit het Verenigd Koninkrijk en Ierland, bestaande uit Niall Horan, Liam Payne, Harry Styles, Louis Tomlinson en Zayn Malik. Malik maakte tot 25 maart 2015 deel uit van de band. De vijf oorspronkelijke leden eindigden in 2010 als derde in het Britse talentenjachtprogramma The X Factor. De groep kondigde in 2015 aan zijn carrière voor onbepaalde tijd te zullen onderbreken en trad in december van dat jaar voor het laatst op.
+                    <p>One Direction (vaak afgekort als 1D) is een boyband uit het Verenigd Koninkrijk en Ierland,
+                        bestaande uit Niall Horan, Liam Payne, Harry Styles, Louis Tomlinson en Zayn Malik. Malik maakte
+                        tot 25 maart 2015 deel uit van de band. De vijf oorspronkelijke leden eindigden in 2010 als
+                        derde in het Britse talentenjachtprogramma The X Factor. De groep kondigde in 2015 aan zijn
+                        carrière voor onbepaalde tijd te zullen onderbreken en trad in december van dat jaar voor het
+                        laatst op.
                     </p>
-                    <div class="icons"> 
-                        <a href="https://www.youtube.com/channel/UCb2HGwORFBo94DmRx4oLzow"><i class="fa-brands fa-youtube"></i></a><br>
+                    <div class="icons">
+                        <a href="https://www.youtube.com/channel/UCb2HGwORFBo94DmRx4oLzow"><i
+                                class="fa-brands fa-youtube"></i></a><br>
                         <a href="https://open.spotify.com/artist/4AK6F7OLvEQ5QYCBNiQWHq"></i></a><br>
-                        <a href="https://www.onedirectionmusic.com/gb/home.html"><i class="fa-solid fa-globe"></i></a><br>
-                        <a href="https://www.instagram.com/onedirection/?hl=nl"><i class="fa-brands fa-instagram"></i></a><br>
+                        <a href="https://www.onedirectionmusic.com/gb/home.html"><i
+                                class="fa-solid fa-globe"></i></a><br>
+                        <a href="https://www.instagram.com/onedirection/?hl=nl"><i
+                                class="fa-brands fa-instagram"></i></a><br>
                         <a href="https://twitter.com/onedirection"><i class="fa-brands fa-twitter"></i></a><br>
-                        <a href="https://www.facebook.com/onedirectionmusic/?locale=nl_BE"><i class="fa-brands fa-facebook-f"></i></a><br>
+                        <a href="https://www.facebook.com/onedirectionmusic/?locale=nl_BE"><i
+                                class="fa-brands fa-facebook-f"></i></a><br>
                         <a href="https://www.tiktok.com/tag/onedirection"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
             <div class="embedframe">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/4AK6F7OLvEQ5QYCBNiQWHq?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/artist/4AK6F7OLvEQ5QYCBNiQWHq?utm_source=generator&theme=0"
+                    width="100%" height="352" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
             </div>
         </section>
     </main>
