--- a/Festival/Alec.html
+++ b/Festival/Alec.html
@@ -11,6 +11,7 @@
     <link rel="Icon" type="image" href="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg">
     <title>Infinite-Sounds Festival | 2023 | LINE-UP</title>
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -41,19 +42,28 @@
                         deelde visitekaartjes uit om zijn werk te promoten. Hij wordt beschouwd als een selfmade
                         artiest; iemand die vanuit het niets is begonnen. Zijn bekendste hit is "Let me down slowly".
                     </p>
-                    <div class="icons"> 
-                        <a href="https://www.youtube.com/@AlecBenjaminMusic"><i class="fa-brands fa-youtube"></i></a><br>
-                        <a href="https://open.spotify.com/artist/5IH6FPUwQTxPSXurCrcIov"><i class="fa-brands fa-spotify"></i></a><br>
-                        <a href="https://www.alecbenjamin.com/?email=sennecoen11%40gmail.com&autoreply=yes&Datasource=AlecBenjamin_OlderOutNow_Standalone_Website&newsletterId=14077609"><i class="fa-solid fa-globe"></i></a><br>
+                    <div class="icons">
+                        <a href="https://www.youtube.com/@AlecBenjaminMusic"><i
+                                class="fa-brands fa-youtube"></i></a><br>
+                        <a href="https://open.spotify.com/artist/5IH6FPUwQTxPSXurCrcIov"><i
+                                class="fa-brands fa-spotify"></i></a><br>
+                        <a
+                            href="https://www.alecbenjamin.com/?email=sennecoen11%40gmail.com&autoreply=yes&Datasource=AlecBenjamin_OlderOutNow_Standalone_Website&newsletterId=14077609"><i
+                                class="fa-solid fa-globe"></i></a><br>
                         <a href="https://www.instagram.com/alecbenjamin/"><i class="fa-brands fa-instagram"></i></a><br>
                         <a href="https://twitter.com/AlecBenjamin"><i class="fa-brands fa-twitter"></i></a><br>
-                        <a href="https://www.facebook.com/search/top?q=alec%20benjamin"><i class="fa-brands fa-facebook-f"></i></a><br>
+                        <a href="https://www.facebook.com/search/top?q=alec%20benjamin"><i
+                                class="fa-brands fa-facebook-f"></i></a><br>
                         <a href="https://www.tiktok.com/@alecbenjamin"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
             <div class="embedframe">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5IH6FPUwQTxPSXurCrcIov?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/artist/5IH6FPUwQTxPSXurCrcIov?utm_source=generator&theme=0"
+                    width="100%" height="352" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
             </div>
         </section>
     </main>
