--- a/Festival/Dermot.html
+++ b/Festival/Dermot.html
@@ -11,6 +11,7 @@
     <link rel="Icon" type="image" href="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg">
     <title>Infinite-Sounds Festival | 2023 | LINE-UP</title>
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -32,21 +33,32 @@
                     <img src="static/Assets/Dermot;.jpg" alt="DermotKennedy">
                 </div>
                 <div class="grid-card">
-                    <p>Dermot Joseph Kennedy is een Ierse singer-songwriter. Hij verwierf bekendheid in Nederland en België door zijn single Power over me die de Nederlandse Top 40 en de Vlaamse hitlijsten heeft bereikt. Begin 2019 bracht hij het album Dermot Kennedy uit, met daarin voorheen uitgebrachte nummers.
+                    <p>Dermot Joseph Kennedy is een Ierse singer-songwriter. Hij verwierf bekendheid in Nederland en
+                        België door zijn single Power over me die de Nederlandse Top 40 en de Vlaamse hitlijsten heeft
+                        bereikt. Begin 2019 bracht hij het album Dermot Kennedy uit, met daarin voorheen uitgebrachte
+                        nummers.
                     </p>
-                    <div class="icons"> 
-                        <a href="https://www.youtube.com/channel/UCTujaKfo0jMXXhjvRtB6yYQ"><i class="fa-brands fa-youtube"></i></a><br>
-                        <a href="https://open.spotify.com/artist/5KNNVgR6LBIABRIomyCwKJ"><i class="fa-brands fa-spotify"></i></a><br>
+                    <div class="icons">
+                        <a href="https://www.youtube.com/channel/UCTujaKfo0jMXXhjvRtB6yYQ"><i
+                                class="fa-brands fa-youtube"></i></a><br>
+                        <a href="https://open.spotify.com/artist/5KNNVgR6LBIABRIomyCwKJ"><i
+                                class="fa-brands fa-spotify"></i></a><br>
                         <a href="https://www.dermotkennedy.com/"><i class="fa-solid fa-globe"></i></a><br>
-                        <a href="https://www.instagram.com/dermotkennedy/"><i class="fa-brands fa-instagram"></i></a><br>
+                        <a href="https://www.instagram.com/dermotkennedy/"><i
+                                class="fa-brands fa-instagram"></i></a><br>
                         <a href="https://twitter.com/DermotKennedy"><i class="fa-brands fa-twitter"></i></a><br>
-                        <a href="https://www.facebook.com/dermotkennedymusic/?locale=nl_BE"><i class="fa-brands fa-facebook-f"></i></a><br>
+                        <a href="https://www.facebook.com/dermotkennedymusic/?locale=nl_BE"><i
+                                class="fa-brands fa-facebook-f"></i></a><br>
                         <a href="https://www.tiktok.com/@dermotkennedy"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
             <div class="embedframe">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5KNNVgR6LBIABRIomyCwKJ?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/artist/5KNNVgR6LBIABRIomyCwKJ?utm_source=generator&theme=0"
+                    width="100%" height="352" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
             </div>
         </section>
     </main>
