--- a/Festival/ImagineDragons.html
+++ b/Festival/ImagineDragons.html
@@ -11,6 +11,7 @@
     <link rel="Icon" type="image" href="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg">
     <title>Infinite-Sounds Festival | 2023 | LINE-UP</title>
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -32,23 +33,35 @@
                     <img src="static/Assets/imagine-dragons.png" alt="ImagineDragons">
                 </div>
                 <div class="grid-card">
-                    <p>Imagine Dragons is een Amerikaanse poprockband uit Las Vegas, gevormd in 2008. De band bestaat uit Dan Reynolds (zanger), Wayne Sermon (gitarist), Daniel Platzman (drummer) en Ben McKee (bassist). De manager van de band is Mac Reynolds, de oudere broer van zanger Dan Reynolds.
+                    <p>Imagine Dragons is een Amerikaanse poprockband uit Las Vegas, gevormd in 2008. De band bestaat
+                        uit Dan Reynolds (zanger), Wayne Sermon (gitarist), Daniel Platzman (drummer) en Ben McKee
+                        (bassist). De manager van de band is Mac Reynolds, de oudere broer van zanger Dan Reynolds.
 
-                        Het eerste album Night Visions kwam uit in 2012. De band scoorde wereldwijd hits met nummers als On top of the world (2013), Demons (2013), Believer (2017), Thunder (2017), Whatever it takes (2017), Natural (2018) en Bad Liar (2018).
+                        Het eerste album Night Visions kwam uit in 2012. De band scoorde wereldwijd hits met nummers als
+                        On top of the world (2013), Demons (2013), Believer (2017), Thunder (2017), Whatever it takes
+                        (2017), Natural (2018) en Bad Liar (2018).
                     </p>
-                    <div class="icons"> 
-                        <a href="https://www.youtube.com/channel/UCT9zcQNlyht7fRlcjmflRSA"><i class="fa-brands fa-youtube"></i></a><br>
-                        <a href="https://open.spotify.com/artist/53XhwfbYqKCa1cC15pYq2q"><i class="fa-brands fa-spotify"></i></a><br>
+                    <div class="icons">
+                        <a href="https://www.youtube.com/channel/UCT9zcQNlyht7fRlcjmflRSA"><i
+                                class="fa-brands fa-youtube"></i></a><br>
+                        <a href="https://open.spotify.com/artist/53XhwfbYqKCa1cC15pYq2q"><i
+                                class="fa-brands fa-spotify"></i></a><br>
                         <a href="https://www.imaginedragonsmusic.com/#/"><i class="fa-solid fa-globe"></i></a><br>
-                        <a href="https://www.instagram.com/imaginedragons/"><i class="fa-brands fa-instagram"></i></a><br>
+                        <a href="https://www.instagram.com/imaginedragons/"><i
+                                class="fa-brands fa-instagram"></i></a><br>
                         <a href="https://twitter.com/Imaginedragons"><i class="fa-brands fa-twitter"></i></a><br>
-                        <a href="https://www.facebook.com/ImagineDragons"><i class="fa-brands fa-facebook-f"></i></a><br>
+                        <a href="https://www.facebook.com/ImagineDragons"><i
+                                class="fa-brands fa-facebook-f"></i></a><br>
                         <a href="https://www.tiktok.com/@imaginedragons"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
             <div class="embedframe">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/53XhwfbYqKCa1cC15pYq2q?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/artist/53XhwfbYqKCa1cC15pYq2q?utm_source=generator&theme=0"
+                    width="100%" height="352" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
             </div>
         </section>
     </main>
