--- a/Festival/Taylor.html
+++ b/Festival/Taylor.html
@@ -11,6 +11,7 @@
     <link rel="Icon" type="image" href="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg">
     <title>Infinite-Sounds Festival | 2023 | LINE-UP</title>
 </head>
+
 <body>
     <header>
         <div class="logo">
@@ -32,13 +33,28 @@
                     <img src="static/Assets/taylor-swift.npg.png" alt="taylor-swift">
                 </div>
                 <div class="grid-card">
-                    <p>Taylor Alison Swift (Reading (Pennsylvania), 13 december 1989) is een Amerikaans singer-songwriter, muzikant, regisseuse, dichteres en actrice. Ze werd internationaal bekend met de single "Love Story" (2008), en scoorde daarna nog diverse hits. Swift begon haar carrière in de countrymuziek, maar begon op haar vierde album Red (2012) te experimenteren met haar muziekstijl. Haar daaropvolgende albums zijn te plaatsen in de popmuziek. Op folklore en evermore (beide uit 2020) zijn ook invloeden van indiemuziek te horen.
+                    <p>Taylor Alison Swift (Reading (Pennsylvania), 13 december 1989) is een Amerikaans
+                        singer-songwriter, muzikant, regisseuse, dichteres en actrice. Ze werd internationaal bekend met
+                        de single "Love Story" (2008), en scoorde daarna nog diverse hits. Swift begon haar carrière in
+                        de countrymuziek, maar begon op haar vierde album Red (2012) te experimenteren met haar
+                        muziekstijl. Haar daaropvolgende albums zijn te plaatsen in de popmuziek. Op folklore en
+                        evermore (beide uit 2020) zijn ook invloeden van indiemuziek te horen.
 
-                        Swifts werk kent zowel commercieel als professioneel succes. Vijf van haar albums verkochten meer dan 1 miljoen exemplaren in Amerika in hun eerste week, wat haar de enige artiest maakt die dit gelukt is.[1] Daarnaast is Swift in het bezit van twaalf Grammy Awards, een van de hoogste onderscheidingen in de muziekindustrie. Daaronder bevinden zich drie Grammy Awards voor Album of the Year (voor Fearless (2008), 1989 (2014) en folklore (2020)). Swift is de enige vrouwelijke artiest die deze prijs drie keer heeft gewonnen. Swift houdt ook het record voor de artiest met de meeste American Music Awards (40) en de meeste MTV VMA Video of the Year Awards (3). In 2019 werd ze verkozen tot artiest van het decennium (jaren '10) door de American Music Awards en tot vrouw van het decennium (jaren '10) door het Amerikaanse muziektijdschrift Billboard.
+                        Swifts werk kent zowel commercieel als professioneel succes. Vijf van haar albums verkochten
+                        meer dan 1 miljoen exemplaren in Amerika in hun eerste week, wat haar de enige artiest maakt die
+                        dit gelukt is.[1] Daarnaast is Swift in het bezit van twaalf Grammy Awards, een van de hoogste
+                        onderscheidingen in de muziekindustrie. Daaronder bevinden zich drie Grammy Awards voor Album of
+                        the Year (voor Fearless (2008), 1989 (2014) en folklore (2020)). Swift is de enige vrouwelijke
+                        artiest die deze prijs drie keer heeft gewonnen. Swift houdt ook het record voor de artiest met
+                        de meeste American Music Awards (40) en de meeste MTV VMA Video of the Year Awards (3). In 2019
+                        werd ze verkozen tot artiest van het decennium (jaren '10) door de American Music Awards en tot
+                        vrouw van het decennium (jaren '10) door het Amerikaanse muziektijdschrift Billboard.
                     </p>
-                    <div class="icons"> 
-                        <a href="https://www.youtube.com/channel/UCqECaJ8Gagnn7YCbPEzWH6g"><i class="fa-brands fa-youtube"></i></a><br>
-                        <a href="https://open.spotify.com/artist/06HL4z0CvFAxyc27GXpf02"><i class="fa-brands fa-spotify"></i></a><br>
+                    <div class="icons">
+                        <a href="https://www.youtube.com/channel/UCqECaJ8Gagnn7YCbPEzWH6g"><i
+                                class="fa-brands fa-youtube"></i></a><br>
+                        <a href="https://open.spotify.com/artist/06HL4z0CvFAxyc27GXpf02"><i
+                                class="fa-brands fa-spotify"></i></a><br>
                         <a href="https://www.taylorswift.com/"><i class="fa-solid fa-globe"></i></a><br>
                         <a href="https://www.instagram.com/taylorswift/"><i class="fa-brands fa-instagram"></i></a><br>
                         <a href="https://twitter.com/taylorswift13"><i class="fa-brands fa-twitter"></i></a><br>
@@ -48,7 +64,11 @@
                 </div>
             </div>
             <div class="embedframe">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/06HL4z0CvFAxyc27GXpf02?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:12px"
+                    src="https://open.spotify.com/embed/artist/06HL4z0CvFAxyc27GXpf02?utm_source=generator&theme=0"
+                    width="100%" height="352" frameBorder="0" allowfullscreen=""
+                    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                    loading="lazy"></iframe>
             </div>
         </section>
     </main>
