--- a/Festival/1D.html
+++ b/Festival/1D.html
@@ -33,6 +33,8 @@
                     <img src="static/Assets/1D.jpg" alt="1D">
                 </div>
                 <div class="grid-card">
+                    <h3>One Directions</h3><br>
+                    <h4>Main Stage, 19u30 - 21u30</h4>
                     <p>One Direction (vaak afgekort als 1D) is een boyband uit het Verenigd Koninkrijk en Ierland,
                         bestaande uit Niall Horan, Liam Payne, Harry Styles, Louis Tomlinson en Zayn Malik. Malik maakte
                         tot 25 maart 2015 deel uit van de band. De vijf oorspronkelijke leden eindigden in 2010 als
