--- a/Festival/Alec.html
+++ b/Festival/Alec.html
@@ -33,6 +33,8 @@
                     <img src="static/Assets/Alec1.jpg" alt="AlecBenjamin">
                 </div>
                 <div class="grid-card">
+                    <h3>Alec Benjamin</h3> <br>
+                    <h4>Main Stage, 14u30-16u</h4>
                     <p>Alec Shane Benjamin (geboren op 28 mei 1994) is een Amerikaanse singer-songwriter uit Phoenix,
                         Arizona. Hij is populair geworden door zijn popsongs die het verhaal vertellen van
                         gebeurtenissen uit zijn eigen leven. Hij wordt sterk beïnvloed door artiesten als Eminem, John
