--- a/Festival/Arctic.html
+++ b/Festival/Arctic.html
@@ -33,6 +33,8 @@
                     <img src="static/Assets/arctic-monkeys.jpg" alt="arctic-monkeys">
                 </div>
                 <div class="grid-card">
+                    <h3>Arctic Monkeys</h3> <br>
+                    <h4>Infinite Stage, 12u30 - 14u</h4>
                     <p>De Arctic Monkeys is een Britse indierockband uit Sheffield, Engeland. De band, die in 2002 werd
                         opgericht, bestaat uit zanger-gitarist Alex Turner, gitarist Jamie Cook, bassist Nick O'Malley
                         en drummer Matthew Helders. Tot 2006 was Andy Nicholson bassist van de band.
