--- a/Festival/Chase.html
+++ b/Festival/Chase.html
@@ -33,6 +33,8 @@
                     <img src="static/Assets/chase-atlantic.jpeg" alt="chase-atlantic">
                 </div>
                 <div class="grid-card">
+                    <h3>Chase Atlantic</h3> <br>
+                    <h4>Infinite Stage, 17u - 18u30</h4>
                     <p>Chase Atlantic is een Australische alternatieve R&B-band en productietrio uit Cairns, Queensland,
                         opgericht in 2014. De groep bestaat uit drie leden: Christian Anthony, Clinton Cave en Mitchel
                         Cave. Chase Atlantic heeft zeven EP's en drie albums uitgebracht.
