--- a/Festival/Coldplay.html
+++ b/Festival/Coldplay.html
@@ -33,6 +33,8 @@
                     <img src="static/Assets/Coldplay.jpg" alt="coldplay">
                 </div>
                 <div class="grid-card">
+                    <h3>Coldplay</h3> <br>
+                    <h4>Infinite Stage, 15u - 16u</h4>
                     <p>Coldplay is een Britse rockband, die in 1996 in Londen werd gevormd. De leden zijn zanger Chris
                         Martin, gitarist Jon Buckland, drummer Will Champion en bassist Guy Berryman.
 
