--- a/Festival/Dermot.html
+++ b/Festival/Dermot.html
@@ -33,6 +33,8 @@
                     <img src="static/Assets/Dermot;.jpg" alt="DermotKennedy">
                 </div>
                 <div class="grid-card">
+                    <h3>Dermot Kennedy</h3> <br>
+                    <h4>Main Stage, 14u30 - 16u</h4>
                     <p>Dermot Joseph Kennedy is een Ierse singer-songwriter. Hij verwierf bekendheid in Nederland en
                         België door zijn single Power over me die de Nederlandse Top 40 en de Vlaamse hitlijsten heeft
                         bereikt. Begin 2019 bracht hij het album Dermot Kennedy uit, met daarin voorheen uitgebrachte
