--- a/Festival/ImagineDragons.html
+++ b/Festival/ImagineDragons.html
@@ -33,6 +33,8 @@
                     <img src="static/Assets/imagine-dragons.png" alt="ImagineDragons">
                 </div>
                 <div class="grid-card">
+                    <h3>Imagine Dragons</h3> <br>
+                    <h4>Main Stage, 22u - 0u</h4>
                     <p>Imagine Dragons is een Amerikaanse poprockband uit Las Vegas, gevormd in 2008. De band bestaat
                         uit Dan Reynolds (zanger), Wayne Sermon (gitarist), Daniel Platzman (drummer) en Ben McKee
                         (bassist). De manager van de band is Mac Reynolds, de oudere broer van zanger Dan Reynolds.
