--- a/Festival/NF.html
+++ b/Festival/NF.html
@@ -33,6 +33,8 @@
                     <img src=static/Assets/nf.jpg" alt="NF">
                 </div>
                 <div class="grid-card">
+                    <h3>NF</h3> <br>
+                    <h4>Infinite Stage, 19u - 21u</h4>
                     <p>Nathan John Feuerstein (Gladwin, Michigan, 30 maart 1991), bekend onder zijn artiestennaam NF
                         (soms geschreven als ИF), is een Amerikaanse rapper. Hij heeft zes studioalbums uitgebracht:
                         Mansion (2015), Therapy Session (2016), Perception (2017), The Search (2019), CLOUDS (2021) en
