--- a/Festival/Taylor.html
+++ b/Festival/Taylor.html
@@ -33,6 +33,8 @@
                     <img src="static/Assets/taylor-swift.npg.png" alt="taylor-swift">
                 </div>
                 <div class="grid-card">
+                    <h3>Taylor Swift</h3> <br>
+                    <h4>Main Stage, 16u30 - 19u</h4>
                     <p>Taylor Alison Swift (Reading (Pennsylvania), 13 december 1989) is een Amerikaans
                         singer-songwriter, muzikant, regisseuse, dichteres en actrice. Ze werd internationaal bekend met
                         de single "Love Story" (2008), en scoorde daarna nog diverse hits. Swift begon haar carrière in
